--- a/web/CSS/layout.css
+++ b/web/CSS/layout.css
@@ -227,6 +227,32 @@
 #header #quickinfo br {
     display: none;
 }
+#pageintros {
+    padding: 200px;
+   
+   
+}
+#xx{
+    position: relative;
+    right:500px;
+    top:-150px;
+    font-family: Georgia, "Times New Roman", Times, serif ;
+}
+#xy{
+    position: relative;
+    right:-100px;
+    top:-180px;
+}
+#yy{
+    position: relative;
+    right:-170px;
+    top:-150px;
+}
+#w{
+    position: relative;
+    right:-900px;
+    top:-150px;
+}
 
 #pageintro {
     padding: 200px 0;
